--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
         </div>
     </section>
 
-    <!-- ==================== CTA ==================== -->
+    <!-- ==================== ПРИЗЫВ К ДЕЙСТВИЮ ==================== -->
     <section class="cta section" id="apply">
         <div class="cta__glow"></div>
         <div class="container">
