Обработка ошибок и удаление блока "отзывы"

--- a/sections/hero.html
+++ b/sections/hero.html
@@ -3,7 +3,7 @@
     <!-- Видео фон -->
     <div class="hero__video-bg">
         <!-- Путь к видео: assets/video/hero-background.mp4 -->
-        <video class="hero__video" autoplay muted loop playsinline poster="assets/images/hero-poster.jpg">
+        <video class="hero__video" autoplay muted loop playsinline preload="metadata">
             <source src="assets/video/hero-background.mp4" type="video/mp4">
             <!-- Если видео не загружается, показываем placeholder -->
         </video>
