Убрал лишние эмодзи

--- a/sections/footer.html
+++ b/sections/footer.html
@@ -35,9 +35,9 @@
             <div class="footer__col">
                 <h4>Контакты</h4>
                 <address>
-                    <p>📍 г. Северодвинск, ул. Воронина, 6</p>
-                    <p>📞 <a href="tel:+78184581773">+7 (8184) 58-17-73</a></p>
-                    <p>✉️ <a href="mailto:sf@narfu.ru">sf@narfu.ru</a></p>
+                    <p>г. Северодвинск, ул. Воронина, 6</p>
+                    <p><a href="tel:+78184581773">+7 (8184) 58-17-73</a></p>
+                    <p><a href="mailto:sf@narfu.ru">sf@narfu.ru</a></p>
                 </address>
                 <div class="footer__socials">
                     <a href="https://vk.com/postupivnarfu" target="_blank" rel="noopener" title="ВКонтакте">VK</a>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="footer__bottom">
-            <p>© 2025 САФУ. Все права защищены.</p>
+            <p>© 2026 САФУ. Все права защищены.</p>
             <p>09.03.01 Информатика и вычислительная техника</p>
         </div>
     </div>
