Декор и переработка цветовой схемы

--- a/sections/about.html
+++ b/sections/about.html
@@ -1,6 +1,13 @@
 <!-- ==================== О НАПРАВЛЕНИИ ==================== -->
 <!-- Сначала идёт секция "О направлении" -->
 <section class="about section" id="about">
+    <!-- Декоративные элементы -->
+    <div class="decor decor--ring" style="width:120px;height:120px;top:50%;right:8%;opacity:0.5;animation:rotateSlow 20s linear infinite" aria-hidden="true"></div>
+    <div class="decor decor--ring-dashed" style="width:90px;height:90px;top:20%;left:3%;animation:rotateSlow 18s linear infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="top:30%;right:15%;opacity:0.6;animation:floatSlow 7s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="bottom:25%;right:5%;opacity:0.5;animation:floatSlow 9s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--line" style="height:120px;top:10%;left:12%;animation:driftX 10s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--gradient-blob" style="width:300px;height:300px;top:-60px;left:-80px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">О направлении</span>
