--- a/sections/advantages.html
+++ b/sections/advantages.html
@@ -1,5 +1,13 @@
 <!-- ==================== ПРЕИМУЩЕСТВА ==================== -->
 <section class="advantages section" id="advantages">
+    <!-- Декоративные элементы -->
+    <div class="decor decor--ring-dashed" style="width:180px;height:180px;top:10%;left:2%;animation:rotateSlow 30s linear infinite" aria-hidden="true"></div>
+    <div class="decor decor--ring" style="width:80px;height:80px;bottom:20%;right:4%;opacity:0.5;animation:rotateSlow 15s linear infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--dots" style="width:120px;height:120px;top:40%;right:2%;opacity:0.4;animation:pulseSlow 6s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="bottom:30%;left:8%;opacity:0.5;animation:floatSlow 9s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="top:25%;right:12%;opacity:0.4;animation:floatSlow 10s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--line" style="height:100px;top:15%;right:20%;animation:driftX 8s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--gradient-blob" style="width:280px;height:280px;bottom:-60px;right:-70px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Преимущества</span>
