--- a/sections/curriculum.html
+++ b/sections/curriculum.html
@@ -1,5 +1,12 @@
 <!-- ==================== УЧЕБНЫЙ ПЛАН ==================== -->
 <section class="curriculum section" id="curriculum">
+    <!-- Декоративные элементы -->
+    <div class="decor decor--ring" style="width:200px;height:200px;bottom:5%;left:3%;opacity:0.4;animation:rotateSlow 26s linear infinite" aria-hidden="true"></div>
+    <div class="decor decor--ring-dashed" style="width:100px;height:100px;top:12%;right:5%;animation:rotateSlow 20s linear infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--dots" style="width:90px;height:90px;top:50%;left:1%;opacity:0.35;animation:floatSlow 10s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="top:20%;left:15%;opacity:0.5;animation:floatSlow 7s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="bottom:15%;right:8%;opacity:0.45;animation:floatSlow 12s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--gradient-blob" style="width:320px;height:320px;top:-80px;left:-90px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Учебный план</span>
