--- a/sections/education-track.html
+++ b/sections/education-track.html
@@ -1,6 +1,13 @@
 <!-- ==================== ТРЕК ОБУЧЕНИЯ (4 ГОДА) ==================== -->
 <!-- Визуальный таймлайн всего пути обучения -->
 <section class="education-track section" id="track">
+    <!-- Декоративные элементы -->
+    <div class="decor decor--ring" style="width:150px;height:150px;top:5%;right:4%;opacity:0.4;animation:rotateSlow 24s linear infinite" aria-hidden="true"></div>
+    <div class="decor decor--dots" style="width:100px;height:100px;bottom:15%;right:6%;opacity:0.4;animation:floatSlow 12s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="top:60%;left:5%;opacity:0.5;animation:floatSlow 8s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="top:15%;left:10%;opacity:0.4;animation:floatSlow 11s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--line" style="height:150px;bottom:5%;right:12%;animation:driftX 9s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--gradient-blob" style="width:350px;height:350px;bottom:-100px;right:-100px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Путь развития</span>
