--- a/sections/footer.html
+++ b/sections/footer.html
@@ -1,5 +1,10 @@
 <!-- ==================== FOOTER ==================== -->
 <footer class="footer">
+    <!-- Декоративные элементы -->
+    <div class="decor decor--ring" style="width:100px;height:100px;top:15%;left:5%;opacity:0.35;animation:rotateSlow 18s linear infinite" aria-hidden="true"></div>
+    <div class="decor decor--ring-dashed" style="width:80px;height:80px;bottom:20%;right:6%;animation:rotateSlow 22s linear infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="top:30%;right:15%;opacity:0.4;animation:floatSlow 8s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="bottom:35%;left:12%;opacity:0.35;animation:floatSlow 10s ease-in-out infinite reverse" aria-hidden="true"></div>
     <div class="container">
         <div class="footer__grid">
             <div class="footer__col">
