--- a/sections/hero.html
+++ b/sections/hero.html
@@ -18,6 +18,24 @@
         <div class="hero__video-overlay"></div>
     </div>
 
+    <!-- Декоративные элементы фона -->
+    <div class="hero__decor">
+        <div class="hero__dots hero__dots--right" aria-hidden="true"></div>
+        <div class="hero__dots hero__dots--left" aria-hidden="true"></div>
+        <div class="hero__circle hero__circle--1" aria-hidden="true"></div>
+        <div class="hero__circle hero__circle--2" aria-hidden="true"></div>
+        <div class="hero__line hero__line--1" aria-hidden="true"></div>
+        <div class="hero__line hero__line--2" aria-hidden="true"></div>
+        <!-- Дополнительный декор -->
+        <div class="decor decor--cross" style="top:25%;left:8%;opacity:0.6;animation:floatSlow 7s ease-in-out infinite" aria-hidden="true"></div>
+        <div class="decor decor--cross" style="bottom:20%;right:12%;opacity:0.4;animation:floatSlow 9s ease-in-out infinite reverse" aria-hidden="true"></div>
+        <div class="decor decor--diamond" style="top:15%;right:25%;opacity:0.5;animation:floatSlow 11s ease-in-out infinite" aria-hidden="true"></div>
+        <div class="decor decor--diamond" style="bottom:30%;left:15%;opacity:0.4;animation:floatSlow 13s ease-in-out infinite reverse" aria-hidden="true"></div>
+        <div class="decor decor--ring-dashed" style="width:100px;height:100px;top:40%;right:8%;animation:rotateSlow 18s linear infinite" aria-hidden="true"></div>
+        <div class="decor decor--gradient-blob" style="width:400px;height:400px;top:10%;right:-100px" aria-hidden="true"></div>
+        <div class="decor decor--gradient-blob" style="width:300px;height:300px;bottom:-50px;left:-80px" aria-hidden="true"></div>
+    </div>
+
     <div class="hero__container">
         <div class="hero__content">
             <div class="hero__badge"><span class="hero__badge-dot"></span>Приём 2026 открыт</div>
