--- a/sections/career.html
+++ b/sections/career.html
@@ -1,5 +1,13 @@
 <!-- ==================== КАРЬЕРА ==================== -->
 <section class="career section" id="career">
+    <!-- Декоративные элементы -->
+    <div class="decor decor--ring" style="width:160px;height:160px;top:8%;left:4%;opacity:0.45;animation:rotateSlow 22s linear infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--ring-dashed" style="width:130px;height:130px;bottom:12%;right:3%;animation:rotateSlow 28s linear infinite" aria-hidden="true"></div>
+    <div class="decor decor--dots" style="width:110px;height:110px;top:55%;right:1%;opacity:0.4;animation:pulseSlow 7s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="top:35%;right:10%;opacity:0.5;animation:floatSlow 8s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="bottom:30%;left:6%;opacity:0.4;animation:floatSlow 11s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--line" style="height:130px;top:5%;right:25%;animation:driftX 9s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--gradient-blob" style="width:300px;height:300px;bottom:-80px;left:-80px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Карьера</span>
