--- a/sections/cta.html
+++ b/sections/cta.html
@@ -1,6 +1,14 @@
 <!-- ==================== ПРИЗЫВ К ДЕЙСТВИЮ ==================== -->
 <section class="cta section" id="apply">
     <div class="cta__glow"></div>
+    <!-- Декоративные элементы -->
+    <div class="decor decor--ring" style="width:180px;height:180px;top:5%;left:5%;opacity:0.45;animation:rotateSlow 20s linear infinite" aria-hidden="true"></div>
+    <div class="decor decor--ring-dashed" style="width:120px;height:120px;bottom:10%;right:8%;animation:rotateSlow 24s linear infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--dots" style="width:130px;height:130px;bottom:20%;left:2%;opacity:0.4;animation:floatSlow 10s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="top:25%;left:15%;opacity:0.5;animation:floatSlow 7s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="bottom:30%;right:12%;opacity:0.4;animation:floatSlow 9s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="top:15%;right:20%;opacity:0.5;animation:floatSlow 11s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="bottom:15%;left:18%;opacity:0.35;animation:floatSlow 13s ease-in-out infinite reverse" aria-hidden="true"></div>
     <div class="container">
         <div class="cta__content reveal">
             <h2>Готов начать свой путь<br>в <span class="cta__highlight">IT-индустрию</span>?</h2>
