--- a/sections/gallery.html
+++ b/sections/gallery.html
@@ -1,5 +1,11 @@
 <!-- ==================== ГАЛЕРЕЯ ==================== -->
 <section class="gallery section" id="gallery">
+    <!-- Декоративные элементы -->
+    <div class="decor decor--ring" style="width:140px;height:140px;top:10%;right:5%;opacity:0.4;animation:rotateSlow 19s linear infinite" aria-hidden="true"></div>
+    <div class="decor decor--ring-dashed" style="width:110px;height:110px;bottom:15%;left:3%;animation:rotateSlow 25s linear infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--cross" style="bottom:25%;right:8%;opacity:0.5;animation:floatSlow 8s ease-in-out infinite reverse" aria-hidden="true"></div>
+    <div class="decor decor--diamond" style="top:30%;left:6%;opacity:0.4;animation:floatSlow 10s ease-in-out infinite" aria-hidden="true"></div>
+    <div class="decor decor--gradient-blob" style="width:250px;height:250px;top:-50px;right:-60px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Галерея</span>
