удалил декор-свечение

--- a/sections/advantages.html
+++ b/sections/advantages.html
@@ -7,7 +7,7 @@
     <div class="decor decor--cross" style="bottom:30%;left:8%;opacity:0.5;animation:floatSlow 9s ease-in-out infinite" aria-hidden="true"></div>
     <div class="decor decor--diamond" style="top:25%;right:12%;opacity:0.4;animation:floatSlow 10s ease-in-out infinite reverse" aria-hidden="true"></div>
     <div class="decor decor--line" style="height:100px;top:15%;right:20%;animation:driftX 8s ease-in-out infinite" aria-hidden="true"></div>
-    <div class="decor decor--gradient-blob" style="width:280px;height:280px;bottom:-60px;right:-70px" aria-hidden="true"></div>
+    <div class="decor" style="width:280px;height:280px;bottom:-60px;right:-70px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Преимущества</span>
