--- a/sections/career.html
+++ b/sections/career.html
@@ -7,7 +7,7 @@
     <div class="decor decor--cross" style="top:35%;right:10%;opacity:0.5;animation:floatSlow 8s ease-in-out infinite" aria-hidden="true"></div>
     <div class="decor decor--diamond" style="bottom:30%;left:6%;opacity:0.4;animation:floatSlow 11s ease-in-out infinite reverse" aria-hidden="true"></div>
     <div class="decor decor--line" style="height:130px;top:5%;right:25%;animation:driftX 9s ease-in-out infinite" aria-hidden="true"></div>
-    <div class="decor decor--gradient-blob" style="width:300px;height:300px;bottom:-80px;left:-80px" aria-hidden="true"></div>
+    <div class="decor" style="width:300px;height:300px;bottom:-80px;left:-80px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Карьера</span>
