--- a/sections/education-track.html
+++ b/sections/education-track.html
@@ -7,7 +7,7 @@
     <div class="decor decor--cross" style="top:60%;left:5%;opacity:0.5;animation:floatSlow 8s ease-in-out infinite reverse" aria-hidden="true"></div>
     <div class="decor decor--diamond" style="top:15%;left:10%;opacity:0.4;animation:floatSlow 11s ease-in-out infinite" aria-hidden="true"></div>
     <div class="decor decor--line" style="height:150px;bottom:5%;right:12%;animation:driftX 9s ease-in-out infinite reverse" aria-hidden="true"></div>
-    <div class="decor decor--gradient-blob" style="width:350px;height:350px;bottom:-100px;right:-100px" aria-hidden="true"></div>
+    <div class="decor" style="width:350px;height:350px;bottom:-100px;right:-100px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Путь развития</span>
