--- a/sections/gallery.html
+++ b/sections/gallery.html
@@ -5,7 +5,7 @@
     <div class="decor decor--ring-dashed" style="width:110px;height:110px;bottom:15%;left:3%;animation:rotateSlow 25s linear infinite reverse" aria-hidden="true"></div>
     <div class="decor decor--cross" style="bottom:25%;right:8%;opacity:0.5;animation:floatSlow 8s ease-in-out infinite reverse" aria-hidden="true"></div>
     <div class="decor decor--diamond" style="top:30%;left:6%;opacity:0.4;animation:floatSlow 10s ease-in-out infinite" aria-hidden="true"></div>
-    <div class="decor decor--gradient-blob" style="width:250px;height:250px;top:-50px;right:-60px" aria-hidden="true"></div>
+    <div class="decor" style="width:250px;height:250px;top:-50px;right:-60px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Галерея</span>
