--- a/sections/hero.html
+++ b/sections/hero.html
@@ -32,8 +32,8 @@
         <div class="decor decor--diamond" style="top:15%;right:25%;opacity:0.5;animation:floatSlow 11s ease-in-out infinite" aria-hidden="true"></div>
         <div class="decor decor--diamond" style="bottom:30%;left:15%;opacity:0.4;animation:floatSlow 13s ease-in-out infinite reverse" aria-hidden="true"></div>
         <div class="decor decor--ring-dashed" style="width:100px;height:100px;top:40%;right:8%;animation:rotateSlow 18s linear infinite" aria-hidden="true"></div>
-        <div class="decor decor--gradient-blob" style="width:400px;height:400px;top:10%;right:-100px" aria-hidden="true"></div>
-        <div class="decor decor--gradient-blob" style="width:300px;height:300px;bottom:-50px;left:-80px" aria-hidden="true"></div>
+        <div class="decor" style="width:400px;height:400px;top:10%;right:-100px" aria-hidden="true"></div>
+        <div class="decor" style="width:300px;height:300px;bottom:-50px;left:-80px" aria-hidden="true"></div>
     </div>
 
     <div class="hero__container">
