--- a/sections/about.html
+++ b/sections/about.html
@@ -7,7 +7,7 @@
     <div class="decor decor--cross" style="top:30%;right:15%;opacity:0.6;animation:floatSlow 7s ease-in-out infinite" aria-hidden="true"></div>
     <div class="decor decor--diamond" style="bottom:25%;right:5%;opacity:0.5;animation:floatSlow 9s ease-in-out infinite reverse" aria-hidden="true"></div>
     <div class="decor decor--line" style="height:120px;top:10%;left:12%;animation:driftX 10s ease-in-out infinite" aria-hidden="true"></div>
-    <div class="decor decor--gradient-blob" style="width:300px;height:300px;top:-60px;left:-80px" aria-hidden="true"></div>
+    <div class="decor" style="width:300px;height:300px;top:-60px;left:-80px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">О направлении</span>
