Заливка всех кликабельных кнопок

--- a/sections/cta.html
+++ b/sections/cta.html
@@ -13,8 +13,8 @@
             <h2>Готов начать свой путь<br>в <span class="cta__highlight">IT-индустрию</span>?</h2>
             <p>Подай заявку и стань частью сообщества будущих технологических лидеров.</p>
             <div class="cta__buttons">
-                <a href="https://narfu.ru/priem/" class="btn btn--primary btn--large" target="_blank" rel="noopener">Подать документы онлайн →</a>
                 <a href="https://narfu.ru/sf/contacts/" class="btn btn--secondary" target="_blank" rel="noopener">Задать вопрос</a>
+                <a href="https://narfu.ru/priem/" class="btn btn--primary btn--large" target="_blank" rel="noopener">Подать документы онлайн <span class="btn__arrow">➜</span></a>
             </div>
             <div class="cta__info">
                 <div><span>25</span><p>Бюджетных мест</p></div>
