CTA загрузки сайта

--- a/sections/career.html
+++ b/sections/career.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Карьера</span>
-            <h2 class="section__title">Твоё будущее начинается здесь</h2>
+            <h2 class="section__title">Твоё цифровое будущее начинается здесь</h2>
             <p class="section__desc">Наши выпускники востребованы в крупнейших технологических компаниях и на предприятиях региона.</p>
         </header>
         <div class="career__grid">
