--- a/sections/hero.html
+++ b/sections/hero.html
@@ -40,7 +40,7 @@
         <div class="hero__content">
             <div class="hero__badge"><span class="hero__badge-dot"></span>Приём 2026 открыт</div>
             <h1 class="hero__title"><span class="hero__highlight">Информатика</span><br>и вычислительная<br>техника</h1>
-            <p class="hero__subtitle">Создавай будущее в сердце Арктики. Направление 09.03.01 — твой путь в мир высоких технологий и цифровых инноваций в Северодвинске.</p>
+            <p class="hero__subtitle">Создавай цифровое будущее в сердце Арктики. Направление 09.03.01 — твой путь в мир высоких технологий и цифровых инноваций в Северодвинске.</p>
             <div class="hero__buttons">
                 <a href="#about" class="btn btn--secondary btn--large">Узнать больше</a>
                 <a href="https://narfu.ru/priem/" class="btn btn--primary btn--large" target="_blank" rel="noopener">Поступить сейчас <span class="btn__arrow">➜</span></a>
