--- a/sections/preloader.html
+++ b/sections/preloader.html
@@ -2,7 +2,12 @@
 <!-- Загрузочный экран со слоганом САФУ -->
 <div class="preloader">
     <div class="preloader__content">
-        <div class="preloader__logo">Строим будущее вместе</div>
+        <div class="preloader__logo">
+            <span style="--i:0">Построим</span>
+            <span style="--i:1">цифровое</span>
+            <span style="--i:2">будущее</span>
+            <span style="--i:3">вместе!</span>
+        </div>
         <div class="preloader__bar"><div class="preloader__progress"></div></div>
     </div>
 </div>
