--- a/sections/gallery.html
+++ b/sections/gallery.html
@@ -9,7 +9,7 @@
     <div class="container">
         <header class="section__header reveal">
             <span class="section__tag">Галерея</span>
-            <h2 class="section__title">Жизнь на направлении</h2>
+            <h2 class="section__title">Жизнь в университете</h2>
         </header>
         <!-- Слайдер галереи (адаптивный, клавиши, точки, автоплей) -->
         <div class="gallery__slider reveal" aria-label="Галерея фотографий">
