--- a/sections/education-track.html
+++ b/sections/education-track.html
@@ -10,10 +10,37 @@
     <div class="decor" style="width:350px;height:350px;bottom:-100px;right:-100px" aria-hidden="true"></div>
     <div class="container">
         <header class="section__header reveal">
-            <span class="section__tag">Путь развития</span>
+            <span class="section__tag">О программе</span>
             <h2 class="section__title">4 года до успешной карьеры</h2>
             <p class="section__desc">Последовательное развитие от основ программирования до проектирования информационных систем.</p>
         </header>
+
+        <div class="program-info__grid reveal">
+            <div class="program-info__card">
+                <span class="program-info__label">форма обучения</span>
+                <span class="program-info__value">Очная</span>
+            </div>
+            <div class="program-info__card">
+                <span class="program-info__label">длительность</span>
+                <span class="program-info__value">4 года</span>
+            </div>
+            <div class="program-info__card">
+                <span class="program-info__label">язык обучения</span>
+                <span class="program-info__value">Русский</span>
+            </div>
+            <div class="program-info__card">
+                <span class="program-info__label">общежитие</span>
+                <span class="program-info__value program-info__value--check">Да</span>
+            </div>
+            <div class="program-info__card">
+                <span class="program-info__label">военный учебный центр</span>
+                <span class="program-info__value program-info__value--check">Да</span>
+            </div>
+            <div class="program-info__card">
+                <span class="program-info__label">гос. аккредитация</span>
+                <span class="program-info__value program-info__value--check">Да</span>
+            </div>
+        </div>
 
         <div class="education-track__timeline reveal" id="educationTimeline">
             <!-- 1 курс -->
