--- a/sections/nav.html
+++ b/sections/nav.html
@@ -11,9 +11,9 @@
         </a>
         <ul class="nav__links">
             <li><a href="#about">О направлении</a></li>
-            <li><a href="#track">Трек обучения</a></li>
-            <li><a href="#advantages">Преимущества</a></li>
-            <li><a href="#curriculum">Программа</a></li>
+            <li><a href="#track">Обучение</a></li>
+            <li><a href="#advantages">Технологии</a></li>
+            <li><a href="#curriculum">Учебный план</a></li>
             <li><a href="#career">Карьера</a></li>
         </ul>
         <a href="https://narfu.ru/priem/" class="nav__cta btn btn--primary btn--small" target="_blank" rel="noopener">Подать заявку</a>
@@ -25,9 +25,9 @@
     <div class="nav__mobile">
         <ul>
             <li><a href="#about">О направлении</a></li>
-            <li><a href="#track">Трек обучения</a></li>
-            <li><a href="#advantages">Преимущества</a></li>
-            <li><a href="#curriculum">Программа</a></li>
+            <li><a href="#track">Обучение</a></li>
+            <li><a href="#advantages">Технологии</a></li>
+            <li><a href="#curriculum">Учебный план</a></li>
             <li><a href="#career">Карьера</a></li>
             <li><a href="https://narfu.ru/priem/" class="btn btn--primary" target="_blank" rel="noopener">Подать заявку</a></li>
         </ul>
