--- a/sections/education-track.html
+++ b/sections/education-track.html
@@ -30,15 +30,24 @@
             </div>
             <div class="program-info__card">
                 <span class="program-info__label">общежитие</span>
-                <span class="program-info__value program-info__value--check">Да</span>
+                <span class="program-info__value">
+                    <span class="program-info__check" aria-hidden="true"><svg viewBox="0 0 28 28" width="26" height="26" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="14" cy="14" r="11" fill="#2dd4bf"/><circle cx="14" cy="14" r="12.5" fill="none" stroke="rgba(45,212,191,0.3)" stroke-width="1.5"/><polyline points="8,14.5 11.5,18 20,9.5" stroke="white" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
+                    Да
+                </span>
             </div>
             <div class="program-info__card">
                 <span class="program-info__label">военный учебный центр</span>
-                <span class="program-info__value program-info__value--check">Да</span>
+                <span class="program-info__value">
+                    <span class="program-info__check" aria-hidden="true"><svg viewBox="0 0 28 28" width="26" height="26" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="14" cy="14" r="11" fill="#2dd4bf"/><circle cx="14" cy="14" r="12.5" fill="none" stroke="rgba(45,212,191,0.3)" stroke-width="1.5"/><polyline points="8,14.5 11.5,18 20,9.5" stroke="white" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
+                    Да
+                </span>
             </div>
             <div class="program-info__card">
                 <span class="program-info__label">гос. аккредитация</span>
-                <span class="program-info__value program-info__value--check">Да</span>
+                <span class="program-info__value">
+                    <span class="program-info__check" aria-hidden="true"><svg viewBox="0 0 28 28" width="26" height="26" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="14" cy="14" r="11" fill="#2dd4bf"/><circle cx="14" cy="14" r="12.5" fill="none" stroke="rgba(45,212,191,0.3)" stroke-width="1.5"/><polyline points="8,14.5 11.5,18 20,9.5" stroke="white" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
+                    Да
+                </span>
             </div>
         </div>
 
