--- a/sections/career.html
+++ b/sections/career.html
@@ -9,26 +9,35 @@
     <div class="decor decor--line" style="height:130px;top:5%;right:25%;animation:driftX 9s ease-in-out infinite" aria-hidden="true"></div>
     <div class="decor" style="width:300px;height:300px;bottom:-80px;left:-80px" aria-hidden="true"></div>
     <div class="container">
-        <header class="section__header reveal">
+        <header class="section__header section__header--left reveal">
             <span class="section__tag">Карьера</span>
             <h2 class="section__title">Твоё цифровое будущее начинается здесь</h2>
             <p class="section__desc">Наши выпускники востребованы в крупнейших технологических компаниях и на предприятиях региона.</p>
         </header>
-        <div class="career__grid">
-            <div class="career__roles reveal reveal--left">
-                <div class="career__role"><div class="career__role-icon"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-laptop"></use></svg></div><div class="career__role-info"><h4>Fullstack Developer</h4><p>Web-приложения</p></div><div class="career__role-salary"><span>от 150 000 ₽</span><small>в месяц</small></div></div>
-                <div class="career__role"><div class="career__role-icon"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-brain"></use></svg></div><div class="career__role-info"><h4>ML Engineer</h4><p>Машинное обучение</p></div><div class="career__role-salary"><span>от 200 000 ₽</span><small>в месяц</small></div></div>
-                <div class="career__role"><div class="career__role-icon"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-shield"></use></svg></div><div class="career__role-info"><h4>Security Engineer</h4><p>Кибербезопасность</p></div><div class="career__role-salary"><span>от 180 000 ₽</span><small>в месяц</small></div></div>
-                <div class="career__role"><div class="career__role-icon"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-cloud"></use></svg></div><div class="career__role-info"><h4>DevOps Engineer</h4><p>Инфраструктура</p></div><div class="career__role-salary"><span>от 170 000 ₽</span><small>в месяц</small></div></div>
+
+        <!-- Блок компаний — полная ширина -->
+        <div class="career__companies reveal">
+            <h3>Где работают наши выпускники</h3>
+            <div class="career__logos">
+                <div class="career__logo-slot" aria-label="Логотип Севмаш"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип Звёздочка"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип Арктика"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип Яндекс"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип VK"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип Сбер"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип Тинькофф"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип Ростелеком"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип 1С"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип МТС"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
             </div>
-            <div class="career__companies reveal reveal--right">
-                <h3>Где работают наши выпускники</h3>
-                <div class="career__logos">
-                    <div>Севмаш</div><div>Звёздочка</div><div>Арктика</div>
-                    <div>Яндекс</div><div>VK</div><div>Сбер</div>
-                    <div>Тинькофф</div><div>Ростелеком</div><div>1С</div>
-                </div>
-            </div>
+        </div>
+
+        <!-- Вакансии — 2 колонки по 2 строки -->
+        <div class="career__roles reveal">
+            <div class="career__role"><div class="career__role-icon"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-laptop"></use></svg></div><div class="career__role-info"><h4>Fullstack Developer</h4><p>Web-приложения</p></div><div class="career__role-salary"><span>от 150 000 ₽</span><small>в месяц</small></div></div>
+            <div class="career__role"><div class="career__role-icon"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-brain"></use></svg></div><div class="career__role-info"><h4>ML Engineer</h4><p>Машинное обучение</p></div><div class="career__role-salary"><span>от 200 000 ₽</span><small>в месяц</small></div></div>
+            <div class="career__role"><div class="career__role-icon"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-shield"></use></svg></div><div class="career__role-info"><h4>Security Engineer</h4><p>Кибербезопасность</p></div><div class="career__role-salary"><span>от 180 000 ₽</span><small>в месяц</small></div></div>
+            <div class="career__role"><div class="career__role-icon"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-cloud"></use></svg></div><div class="career__role-info"><h4>DevOps Engineer</h4><p>Инфраструктура</p></div><div class="career__role-salary"><span>от 170 000 ₽</span><small>в месяц</small></div></div>
         </div>
     </div>
 </section>
