--- a/sections/about.html
+++ b/sections/about.html
@@ -9,7 +9,7 @@
     <div class="decor decor--line" style="height:120px;top:10%;left:12%;animation:driftX 10s ease-in-out infinite" aria-hidden="true"></div>
     <div class="decor" style="width:300px;height:300px;top:-60px;left:-80px" aria-hidden="true"></div>
     <div class="container">
-        <header class="section__header reveal">
+        <header class="section__header section__header--left reveal">
             <span class="section__tag">О направлении</span>
             <h2 class="section__title">Стань архитектором<br>цифрового мира</h2>
             <p class="section__desc">Направление 09.03.01 готовит специалистов, которые создают ПО, проектируют информационные системы и разрабатывают технологии будущего.<br><strong>Профиль: Интегрированные автоматизированные информационные системы</strong></p>
