--- a/sections/education-track.html
+++ b/sections/education-track.html
@@ -9,7 +9,7 @@
     <div class="decor decor--line" style="height:150px;bottom:5%;right:12%;animation:driftX 9s ease-in-out infinite reverse" aria-hidden="true"></div>
     <div class="decor" style="width:350px;height:350px;bottom:-100px;right:-100px" aria-hidden="true"></div>
     <div class="container">
-        <header class="section__header reveal">
+        <header class="section__header section__header--left reveal">
             <span class="section__tag">О программе</span>
             <h2 class="section__title">4 года до успешной карьеры</h2>
             <p class="section__desc">Последовательное развитие от основ программирования до проектирования информационных систем.</p>
